fix: scrollbars on chrome are now fixed
width 0 caused issues on spacing, so used display:none

--- a/src/index.less
+++ b/src/index.less
@@ -188,7 +188,7 @@ html, body{
   scrollbar-width: none;
 }
 .customScroll::-webkit-scrollbar {
-  width: 0px;
+  display: none;
 }
 
 #autotrash_header{
